Von Observables auf Signals umgestellt

--- a/src/app/components/main-view/main-view.component.html
+++ b/src/app/components/main-view/main-view.component.html
@@ -4,14 +4,14 @@
   </div>
   <div class="row mt-1">
     <div class="col-md-7 mb-3">
-      <app-show-list [shows$]="shows$" (selectedShow)="onSelectedShow($event)"></app-show-list>
+      <app-show-list [shows]="shows()" (selectedShow)="onSelectedShow($event)"></app-show-list>
       <app-show-form/>
     </div>
     <div class="col-md-5">
       @if(isShowSelected) {
         <app-show-details
-          [detailShow$]="selectedShow$"
-          [errorMessage$]="errorMessage$"
+          [detailShow]="selectedShow()"
+          [errorMessage]="errorMessage()"
         />
       }
     </div>
